...
    
    return Scaffold(
      backgroundColor: AppTheme.secondary,
      appBar: AppBar(
        backgroundColor: Colors.transparent,
        title: Text(
          'My Profile',
          style: Theme.of(context).textTheme.displayMedium?.copyWith(
            color: AppTheme.primary,
            fontSize: 28,
          ),
        ),
        centerTitle: false,
...
                ),
                child: Row(
                  mainAxisAlignment: MainAxisAlignment.center,
                  children: [
                    const Icon(LucideIcons.logOut, color: Colors.redAccent),
                    const SizedBox(width: 8),
                    Text('Log Out', style: TextStyle(color: Colors.redAccent, fontSize: 16, fontWeight: ref.watch(fontWeightProvider).weight)),
                  ],
                ),
              ),
            ),
          ],
        ),
...
